--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,7 @@
                     <p><%= @product.description %></p>
                 </div>
                 <div class="actions">
-                    <%= link_to "Add to meal", "", class: "btn btn-warning" %>
+                    <%= link_to "Add to meal", new_product_order_path(@product), class: "btn btn-warning" %>
                 </div>
             </div>
 
