--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,10 @@
 	  </div>
 	  
 	</nav>
+	<div class="container">
+		<%= alert_message flash[:success]%>
+		<%= alert_message flash[:error], class: 'alert alert-danger'%>
+	</div>
 	<%= yield %>
 
 </body>
